--- a/project.html
+++ b/project.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
 
     <title>Projects</title>
-    <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header class="navbar">
@@ -32,7 +32,7 @@
 
         
     </div>
-    <script src="js/script.js"></script>
+    <script src="script.js"></script>
 
  
 </body>
