--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Brendon So</title>
     <script src="JavaScript.js"></script>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style/style.css">
 </head>
 <body>
     <header class="navbar">
@@ -87,7 +87,7 @@
 </footer>
 
     </div>
-    <script src="script.js"></script>
+    <script src="js/script.js"></script>
 
  
 </body>
