--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header class="navbar">
         <a href="index.html" class="nav-icon"><img src="images/icons/home.png" alt="Home"></a>
-        <a href="project.html" class="nav-icon"><img src="images/icons/folder.png" alt="Projects"></a>
+        <a href="https://github.com/brendonso" class="nav-icon"><img src="images/icons/folder.png" alt="Projects"></a>
     </header>
 
 
